--- a/CromulentBisgetti.DemoApp/Views/Home/Index.cshtml
+++ b/CromulentBisgetti.DemoApp/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <html>
 <head>
-    <title>Container Packing</title>
+    <title>Container Packing Development</title>
     <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
     <style>
         body {
