--- a/CromulentBisgetti.DemoApp/Views/Home/Index.cshtml
+++ b/CromulentBisgetti.DemoApp/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 <html>
 <head>
     <title>Container Packing</title>
+	
     <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
     <style>
         body {
@@ -61,6 +62,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">Packing Algorithms</h3>
+						  <h3 class="panel-title">Packing Algorithms cabecera</h3>
                     </div>
                     <div class="panel-body">
                         <table class="table table-condensed" style="font-size: 14px;">
